<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffeeeef0"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <include
        android:id="@+id/line_title"
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:layout_alignParentTop="true"
        layout="@layout/common_title" />

    <LinearLayout
        android:id="@+id/line_top"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15.0dip"
            android:src="@drawable/login_logo" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line_center"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_below="@+id/line_top"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30.0dip"
        android:layout_marginRight="30.0dip"
        android:layout_weight="2"
        android:orientation="vertical"
        android:paddingTop="10.0dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_username"
                style="@style/black_14_style"
                android:layout_width="300dp"
                android:layout_height="38.0dip"
                android:background="@drawable/input_bg"
                android:hint="@string/account_hint"
                android:inputType="textPersonName"
                android:maxLength="12"
                android:singleLine="true" />

            <TextView
                style="@style/gray_12_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0dip"
                android:layout_marginTop="5.0dip"
                android:gravity="center"
                android:text="@string/account_desc" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:gravity="center"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_password"
                style="@style/black_14_style"
                android:layout_width="300dp"
                android:layout_height="38.0dip"
                android:background="@drawable/input_bg"
                android:hint="@string/login_password_hint"
                android:maxLength="12"
                android:password="true"
                android:singleLine="true" />

            <TextView
                style="@style/gray_12_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0dip"
                android:layout_marginTop="5.0dip"
                android:gravity="center"
                android:text="@string/login_password_desc" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:gravity="center"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_repassword"
                style="@style/black_14_style"
                android:layout_width="300dp"
                android:layout_height="38.0dip"
                android:background="@drawable/input_bg"
                android:hint="@string/re_password_hint"
                android:maxLength="12"
                android:password="true"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25.0dip"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_register"
                style="@style/white_text_style_16"
                android:layout_width="300dp"
                android:layout_height="38.0dip"
                android:background="@drawable/login_button"
                android:text="@string/register_immi" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>