<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffeeeef0"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <include
        android:id="@+id/line_title"
        android:layout_width="fill_parent"
        android:layout_height="70.0dip"
        layout="@layout/common_title"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/login_background"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_logo_p" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/login_logo_text"
                android:gravity="center"
                android:src="@drawable/login_logo"
                android:text=""
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="50dp"
            android:background="@color/login_background_line" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/line_center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30.0dip"
                android:layout_marginRight="30.0dip"
                android:orientation="vertical"
                android:paddingTop="15.0dip" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="34dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="6dp"
                        android:background="@drawable/u_name" />

                    <EditText
                        android:id="@+id/username"
                        style="@style/black_16_style"
                        android:layout_width="350.0dip"
                        android:layout_height="50.0dip"
                        android:background="@drawable/bg_corner"
                        android:hint="@string/username_hint"
                        android:maxLength="11"
                        android:padding="10dp"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15.0dip"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/u_pw" />

                    <EditText
                        android:id="@+id/password"
                        style="@style/black_16_style"
                        android:layout_width="350.0dip"
                        android:layout_height="50.0dip"
                        android:background="@drawable/bg_corner"
                        android:hint="@string/password_hint"
                        android:padding="10dp"
                        android:password="true"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="38.0dip"
                    android:layout_marginTop="25.0dip"
                    android:gravity="left|center"
                    android:orientation="horizontal"
                    android:visibility="visible" >

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5" />

                    <CheckBox
                        android:id="@+id/cb_store_pwd"
                        style="@style/gray_12_style"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="记住密码" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25.0dip"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/btn_login"
                        style="@style/white_text_style_16"
                        android:layout_width="300.0dip"
                        android:layout_height="50.0dip"
                        android:textSize="24sp"
                        android:background="@drawable/login_button"
                        android:text="@string/login" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>